--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "landing-page-small-apps",
   "main": "index.js",
   "engines": {
-    "node": "12.13.1"
+    "node": ">=10.16.3"
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development --config ./webpack.development.config.js --hot --open --disable-host-check",
@@ -65,7 +65,6 @@
     "@babel/preset-typescript": "^7.7.4",
     "@babel/register": "^7.7.4",
     "@babel/runtime": "^7.7.4",
-    "autoprefixer": "^9.7.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
@@ -82,7 +81,6 @@
     "core-js": "^3.4.5",
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
-    "cssnano": "^4.1.10",
     "d3": "^5.14.2",
     "dotenv": "^8.2.0",
     "es6-promise": "^4.2.8",
@@ -92,12 +90,8 @@
     "isomorphic-fetch": "^2.2.1",
     "next": "^9.1.4",
     "openssl": "^1.1.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.7.0",
     "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
-    "purgecss-webpack-plugin": "^1.6.0",
     "raf": "^3.4.1",
     "raw-loader": "^4.0.0",
     "react": "^16.12.0",
@@ -114,7 +108,6 @@
     "sockjs": "^0.3.19",
     "sockjs-client": "^1.4.0",
     "string-replace-webpack-plugin": "^0.1.3",
-    "terser-webpack-plugin": "^2.2.2",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
@@ -138,12 +131,15 @@
     "node-hot-loader": "^1.17.6",
     "node-sass": "^4.13.0",
     "nodemon": "^2.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "purgecss-webpack-plugin": "^1.6.0",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "16.12.0",
     "regenerator-runtime": "^0.13.3",
     "rimraf": "3.0.0",
     "sass-loader": "8.0.0",
     "style-loader": "1.0.1",
+    "terser-webpack-plugin": "^2.2.2",
     "url-loader": "3.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
