--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       target: nodeServer
       context: ../
-      dockerfile: docker/PROD.Dockerfile
+      dockerfile: docker/Dockerfile
     restart: always
     networks:
       - internal
@@ -15,7 +15,7 @@ services:
     build:
       target: webServer
       context: ../
-      dockerfile: docker/PROD.Dockerfile
+      dockerfile: docker/Dockerfile
     restart: always
     ports:
       - 80:80
